# render-note-taker-agent

./: .gitignore  Makefile  PLAN.md  QUICKSTART.md  README.md  docker-compose.yml  env.template  render.yaml
backend/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  test_chunking.py
backend/services/: __init__.py  assemblyai_service.py  openai_service.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AudioRecorder.tsx  ResultsViewer.tsx
frontend/lib/: api.ts
