[project]
name = "note-taker-backend"
version = "0.1.0"
description = "Flask backend for note-taking transcription and summarization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "assemblyai>=0.30.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

